--- a/components/header.html
+++ b/components/header.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header class="site-header">
-      <div class="logo">CryptoDash</div>
-      <span class="toggle" id="themeToggle">🌙 Dark</span>
+      <img src="../images/logo.png" alt="CryptoDashboard Logo" />
+      <span class="toggle" id="themeToggle">🌙 </span>
       <nav>
         <a href="index.html">Dashboard</a>
         <a href="about.html">About</a>
